welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayCount9:2: error: not found: value nombre
  nombre=0;
  ^arrayCount9:3: error: not found: value nombre
  for (i<-0 to nums.length){if (nums(i)==9){nombre=nombre+1}}
                                            ^arrayCount9:4: error: not found: value nombre
  return nombre} 
         ^